Bug 485107 - Do not throw in NewResolve This changeset makes sure that we allow for properties to be defined on the prototype chain for the JS language helpers in storage. r=bent